# pydantic-video-editing-agent

./: 03-research.md  04-mini-research.md  README.md  agent.py  gemini-agent.py  hello.py  history-of-treble-damanges.md  pyproject.toml  research-agent.py  research-app.py  research-audio-agent.py  research_response_20250705_112609.md  response-03.md  response-o3-pro.md  search.py  voice-overlay.py
test-research/: 03-research.md  history-of-treble-law-citations.md
utils/: tools.py
