[project]
name = "video-editing-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "agentuity>=0.0.95",
    "click>=8.1.8",
    "instructor>=1.8.3",
    "pydantic-ai[logfire,mcp]>=0.3.1",
    "videojungle>=0.1.72",
    "yt-dlp[curl-cffi,default]>=2025.5.22",
]

[dependency-groups]
dev = [
    "ipython>=9.2.0",
]
