[project]
name = "video-editing-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "agentuity>=0.0.98",
    "click>=8.1.8",
    "fal-client",
    "instructor>=1.9.0",
    "logfire>=3.23.0",
    "openai>=1.92.2",
    "pydantic-ai-slim[openai,anthropic,google]>=0.3.5",
    "textual>=3.5.0",
    "videojungle>=0.1.74",
    "yt-dlp[curl-cffi,default]>=2025.5.22",
]

[dependency-groups]
dev = [
    "ipython>=9.2.0",
]

[tool.uv.sources]
fal-client = { git = "https://github.com/burningion/fal.git", subdirectory = "projects/fal_client", rev = "kirk.kaiser/httpx.version.bump" }
